force-app/main/default/objects/Calculation__c/Calculation__c.object-meta.xml
<CustomObject>
    <label>Calculation</label>
    <nameField>
        <label>Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>