force-app/main/default/objects/Calculation__c/fields/Context_Data_String__c.field-meta.xml
<CustomField>
    <fullName>Context_Data_String__c</fullName>
    <label>Context Data String</label>
    <length>200</length>
    <type>Text</type>
</CustomField>