force-app/main/default/objects/Calculation__c/fields/Context_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Context_Object_Type__c</fullName>
    <label>Context Object Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>