force-app/main/default/objects/Calculation__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>100</length>
    <type>Text</type>
</CustomField>